[Calibration] Reorder algorithm and implement warm start after i=1
Now, the gp model is fit once again with the last data point in order to give out the model with most data.

[Calibration] Double-valued parameter feature and updated doc

[Calibration] list-column in tibble try

[Calibration] Feature for double-valued parameter, updated doc

[Cal] Missing docs

[Calibration] User variable to set cores for parallel ensemble run

[Calibration] log(t) kappa function with user specified delta

[Calibration] Helper function to use inside optim()

[Calibration] Without stopping criterion

[Calibration] include corners of hypercube in prediction

Revert "[Calibration] include corners of hypercube in prediction"

This reverts commit 2c364ee2f61d69e91f2365311dc9824805322183.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(.data)
 export(cal_bayesOpt)
 export(cal_change_parameters)
 export(cal_create_calibration_set)
+export(cal_optim_ogs)
 export(cal_sample_parameters)
 export(cal_simulation_error)
 export(create_ens)
