[docs] fix examples in roxygen docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(.data)
 export(create_ens)
 export(create_ogs5)
+export(create_structured_mesh_nodes_ele)
 export(ens_add_ogs5)
 export(ens_get_output)
 export(ens_run)
