[base] search for default ogs5 bin path

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(ogs5_read_many_tecplots)
 export(ogs5_read_tecplot)
 export(ogs5_run)
 export(ogs5_write_inputfiles)
+export(search_ogs5_bin_path)
 importFrom(magrittr,"%>%")
 importFrom(plyr,.)
 importFrom(rlang,.data)
