[base] add set options from config file.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(ogs5_read_tecplot)
 export(ogs5_run)
 export(ogs5_write_inputfiles)
 export(search_ogs5_bin_path)
+export(update_options_from_config)
 importFrom(magrittr,"%>%")
 importFrom(plyr,.)
 importFrom(rlang,.data)
