--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Authors@R:
            comment = structure("https://orcid.org/0000-0003-1094-9255",
                                 .Names = "ORCID"))
 Description: Define and manage simulations using OpenGeoSys.
-License: file LICENSE
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
