[Installation] Update dependency management for installation and vignette building
 Replace RCurl function with base R

[Installation] add ggplot2 dependency for plot method vignette building

[Installation] eliminate ggrides dependency for vignette

[Calibration] Missing dependency for plot method

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,6 @@ Imports:
     plyr,
     dplyr,
     purrr,
-    RCurl,
     readr,
     rlang,
     stringr,
@@ -33,6 +32,8 @@ Imports:
     foreach,
     parallel,
     doParallel,
+    ggplot2,
+    gridExtra,
     GPfit
 Depends: 
     R (>= 2.10)
