--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,7 +34,8 @@ Imports:
     doParallel,
     ggplot2,
     gridExtra,
-    GPfit
+    GPfit,
+    methods
 Depends: 
     R (>= 2.10)
 Suggests: 
