[ci] run only at merge requests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,6 +36,7 @@ test:
         when: 'always'
     # script will only run then attempting to merge/push to master
     only:
+          - merge_requests
           - master
 
 
